# lb-vrf

./: .gitignore  Cargo.toml  readme.md
benches/: basic.rs
c_impl/src/: c_impl.c  keypair.c  lbvrf.h  param.c  param.h  poly.c  poly.h  polyvec.c  polyvec.h  ring.h
c_impl/src/imported/: fips202.c  misc.c  rng.c  symmetric.h
scripts/: cal_cs_tail.sage  calculate_param.sage  proba_util.py
src/: ecvrf.rs  keypair.rs  lbvrf.rs  lib.rs  ntt.rs  param.rs  poly.rs  poly256.rs  poly32.rs  serde.rs
src/test/: keypair.rs  lbvrf.rs  mod.rs  param.rs  poly256.rs  poly32.rs
testc/: makefile  test.c
