[package]
name = "lb-vrf"
version = "0.1.0"
authors = ["zhenfei <zhenfei.zhang@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc = "0.2.0"
rand = "0.7.3"
rand_chacha = ""
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"



[dev-dependencies]
bencher = "0.1.5"
criterion = "0.2.11"


[[bench]]
name = "basic"
harness = false
